# nostalgie

./: .gitignore  README.md
documentatie/: concept.md  planning.md
image_analysis/nostalgia_cpp/: CMakeLists.txt  analyse.cpp  analyse.h  main.cpp  osc.cpp  osc.h
supercollider/: supercollider_nostalgia.scd   testing.scd
supercollider_test_dinge/: oefenen.scd
